# simple_dw_ods

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  Taskfile.yaml  bpproject.toml  main.py  pyproject.toml  workspace.yaml
data/jaffle_shop/: raw_customers.csv  raw_stores.csv
ods_dagster/: replication.yaml
ods_dagster/ods_dagster/: assets.py  definitions.py  environment.py  resources.py
ods_dagster/ods_dagster/jaffle_shop/: dev_assets.py
taskfiles/dev/: Taskfile.yaml
